Prevent page overflow scrolling

--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -1,3 +1,12 @@
-body {
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
   margin: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
